--- a/MyShop/MyShop.WebUI/Views/Basket/Index.cshtml
+++ b/MyShop/MyShop.WebUI/Views/Basket/Index.cshtml
@@ -39,13 +39,15 @@
         </td>
         <td>
             @String.Format("{0:c}", item.Price*item.Quantity)
-        </td>
+        </td> 
         <td>
             <a href="@Url.Action("RemoveFromBasket", "Basket", new { Id = item.Id})" class="btn btn-danger">Delete</a>
         </td>
     </tr>
 }
-    <td colspan="4" style="text-align:right"><strong>Basket Total:</strong></td>
-    <td>@String.Format("{0:c}", (from p in Model select p.Price*p.Quantity).Sum())</td>
-
+    <tr>
+        <td colspan="4" style="text-align:right"><strong>Basket Total:</strong></td>
+        <td>@String.Format("{0:c}", (from p in Model select p.Price * p.Quantity).Sum())</td>
+        <td><a href="@Url.Action("Checkout", "Basket")">Checkout</a></td>
+    </tr>
 </table>
